simplify file generators