@@ -6,14 +6,31 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.mojang.serialization.JsonOps;
+
+import harmonised.pmmo.api.APIUtils.SalvageBuilder;
 import harmonised.pmmo.api.enums.EventType;
 import harmonised.pmmo.api.enums.ModifierDataType;
 import harmonised.pmmo.api.enums.ReqType;
+import harmonised.pmmo.config.codecs.EnhancementsData;
+import harmonised.pmmo.config.codecs.LocationData;
+import harmonised.pmmo.config.codecs.ObjectData;
+import harmonised.pmmo.config.codecs.VeinData;
+import harmonised.pmmo.features.veinmining.VeinMiningLogic;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.world.level.storage.LevelResource;
@@ -22,216 +39,92 @@ import net.minecraftforge.registries.ForgeRegistries;
 public class PackGenerator {
 	public static final String PACKNAME = "generated_pack";
 	public static final String DISABLER = "pmmo_disabler_pack";
+	private static final Gson gson = new GsonBuilder().setPrettyPrinting().create();
 	
 	private enum Category {
-		ITEMS("pmmo/items", server -> ForgeRegistries.ITEMS.getKeys(), 
-				List.of("{",
-					    "\"xp_values\":{",
-					    "	\""+EventType.ANVIL_REPAIR.name()+"\":{},",
-					    "	\""+EventType.BLOCK_PLACE.name()+"\":{},",
-					    "	\""+EventType.BREW.name()+"\":{},",
-					    "	\""+EventType.CONSUME.name()+"\":{},",
-					    "	\""+EventType.CRAFT.name()+"\":{},",
-					    "	\""+EventType.ENCHANT.name()+"\":{},",
-					    "	\""+EventType.FISH.name()+"\":{},",
-					    "	\""+EventType.SMELT.name()+"\":{},",
-					    "	\""+EventType.DEAL_MELEE_DAMAGE.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_MOBS.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_ANIMALS.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_PLAYERS.name()+"\":{},",
-					    "	\""+EventType.DEAL_RANGED_DAMAGE.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_MOBS.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_ANIMALS.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_PLAYERS.name()+"\":{},",
-					    "	\""+EventType.ACTIVATE_ITEM.name()+"\":{}",
-					    "},",
-					    "\"nbt_xp_values\":{",
-					    "	\""+EventType.ANVIL_REPAIR.name()+"\":[],",
-					    "	\""+EventType.BLOCK_PLACE.name()+"\":[],",
-					    "	\""+EventType.BREW.name()+"\":[],",
-					    "	\""+EventType.CONSUME.name()+"\":[],",
-					    "	\""+EventType.CRAFT.name()+"\":[],",
-					    "	\""+EventType.ENCHANT.name()+"\":[],",
-					    "	\""+EventType.FISH.name()+"\":[],",
-					    "	\""+EventType.SMELT.name()+"\":[],",
-					    "	\""+EventType.ACTIVATE_ITEM.name()+"\":[]",
-					    "},",
-					    "\"requirements\":{",
-					    "	\""+ReqType.WEAR.name()+"\":{},",
-					    "	\""+ReqType.TOOL.name()+"\":{},",
-					    "	\""+ReqType.WEAPON.name()+"\":{},",
-					    "	\""+ReqType.USE.name()+"\":{},",
-					    "	\""+ReqType.PLACE.name()+"\":{},",
-					    "	\""+ReqType.BREAK.name()+"\":{},",
-					    "	\""+ReqType.INTERACT.name()+"\":{}",
-					    "},",
-					    "\"nbt_requirements\":{",
-					    "	\""+ReqType.WEAR.name()+"\":[],",
-					    "	\""+ReqType.TOOL.name()+"\":[],",
-					    "	\""+ReqType.WEAPON.name()+"\":[],",
-					    "	\""+ReqType.USE.name()+"\":[],",
-					    "	\""+ReqType.PLACE.name()+"\":[],",
-					    "	\""+ReqType.BREAK.name()+"\":[],",
-					    "	\""+ReqType.INTERACT.name()+"\":[]",
-					    "},",
-					    "\"bonuses\":{",
-					    "	\""+ModifierDataType.HELD.name()+"\":{},",
-					    "	\""+ModifierDataType.WORN.name()+"\":{}",
-					    "},",
-					    "\"nbt_bonuses\":{",
-					    "	\""+ModifierDataType.HELD.name()+"\":[],",
-					    "	\""+ModifierDataType.WORN.name()+"\":[]",
-					    "},",
-					    "\"negative_effect\":{},",
-					    "\"salvage\":{",
-					    "    \"minecraft:item\": {",
-					    "        \"salvageMax\": 1,",
-					    "        \"baseChance\": 0.0,",
-					    "        \"maxChance\": 1.0,",
-					    "        \"chancePerLevel\": {\"skillname\": 1},",
-					    "        \"levelReq\": {\"skillname\": 1},",
-					    "        \"xpPerItem\": {\"skillname\": 1}",
-					    "    }",
-					    "},",
-					    "\"vein_data\":{",
-					    "    \"chargeCap\": 0,",
-					    "    \"chargeRate\": 0.0",
-					    "}",
-						"}")),
-		BLOCKS("pmmo/blocks", server -> ForgeRegistries.BLOCKS.getKeys(), 
-				List.of("{",
-					    "\"xp_values\":{",
-					    "	\""+EventType.BLOCK_BREAK.name()+"\":{},",
-					    "	\""+EventType.BLOCK_PLACE.name()+"\":{},",
-					    "	\""+EventType.GROW.name()+"\":{},",
-					    "	\""+EventType.HIT_BLOCK.name()+"\":{},",
-					    "	\""+EventType.ACTIVATE_BLOCK.name()+"\":{}",
-					    "},",
-					    "\"nbt_xp_values\":{",
-					    "	\""+EventType.BLOCK_BREAK.name()+"\":[],",
-					    "	\""+EventType.BLOCK_PLACE.name()+"\":[],",
-					    "	\""+EventType.GROW.name()+"\":[],",
-					    "	\""+EventType.HIT_BLOCK.name()+"\":[],",
-					    "	\""+EventType.ACTIVATE_BLOCK.name()+"\":[]",
-					    "},",
-					    "\"requirements\":{",
-					    "	\""+ReqType.PLACE.name()+"\":{},",
-					    "	\""+ReqType.BREAK.name()+"\":{},",
-					    "	\""+ReqType.INTERACT.name()+"\":{}",
-					    "},",
-					    "\"nbt_requirements\":{",
-					    "	\""+ReqType.PLACE.name()+"\":[],",
-					    "	\""+ReqType.BREAK.name()+"\":[],",
-					    "	\""+ReqType.INTERACT.name()+"\":[]",
-					    "},",
-					    "\"vein_data\":{",
-					    "    \"consumeAmount\": 0",
-					    "}",
-						"}")),
-		ENTITIES("pmmo/entities", server -> ForgeRegistries.ENTITY_TYPES.getKeys(), 
-				List.of("{",
-						"\"xp_values\":{",
-					    "	\""+EventType.BREED.name()+"\":{},",
-					    "	\""+EventType.RECEIVE_DAMAGE.name()+"\":{},",
-					    "	\""+EventType.FROM_MOBS.name()+"\":{},",
-					    "	\""+EventType.FROM_PLAYERS.name()+"\":{},",
-					    "	\""+EventType.FROM_ANIMALS.name()+"\":{},",
-					    "	\""+EventType.FROM_PROJECTILES.name()+"\":{},",
-					    "	\""+EventType.DEAL_MELEE_DAMAGE.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_MOBS.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_PLAYERS.name()+"\":{},",
-					    "	\""+EventType.MELEE_TO_ANIMALS.name()+"\":{},",
-					    "	\""+EventType.DEAL_RANGED_DAMAGE.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_MOBS.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_PLAYERS.name()+"\":{},",
-					    "	\""+EventType.RANGED_TO_ANIMALS.name()+"\":{},",
-					    "	\""+EventType.DEATH.name()+"\":{},",
-					    "	\""+EventType.ENTITY.name()+"\":{},",
-					    "	\""+EventType.RIDING.name()+"\":{},",
-					    "	\""+EventType.SHIELD_BLOCK.name()+"\":{},",
-					    "	\""+EventType.SLEEP.name()+"\":{},",
-					    "	\""+EventType.TAMING.name()+"\":{}",
-					    "},",
-					    "\"nbt_xp_values\":{",
-					    "	\""+EventType.BREED.name()+"\":[],",
-					    "	\""+EventType.RECEIVE_DAMAGE.name()+"\":[],",
-					    "	\""+EventType.FROM_MOBS.name()+"\":[],",
-					    "	\""+EventType.FROM_PLAYERS.name()+"\":[],",
-					    "	\""+EventType.FROM_ANIMALS.name()+"\":[],",
-					    "	\""+EventType.FROM_PROJECTILES.name()+"\":[],",
-					    "	\""+EventType.DEAL_MELEE_DAMAGE.name()+"\":[],",
-					    "	\""+EventType.MELEE_TO_MOBS.name()+"\":[],",
-					    "	\""+EventType.MELEE_TO_PLAYERS.name()+"\":[],",
-					    "	\""+EventType.MELEE_TO_ANIMALS.name()+"\":[],",
-					    "	\""+EventType.DEAL_RANGED_DAMAGE.name()+"\":[],",
-					    "	\""+EventType.RANGED_TO_MOBS.name()+"\":[],",
-					    "	\""+EventType.RANGED_TO_PLAYERS.name()+"\":[],",
-					    "	\""+EventType.RANGED_TO_ANIMALS.name()+"\":[],",
-					    "	\""+EventType.DEATH.name()+"\":[],",
-					    "	\""+EventType.ENTITY.name()+"\":[],",
-					    "	\""+EventType.RIDING.name()+"\":[],",
-					    "	\""+EventType.SHIELD_BLOCK.name()+"\":[],",
-					    "	\""+EventType.SLEEP.name()+"\":[],",
-					    "	\""+EventType.TAMING.name()+"\":[]",
-					    "},",
-					    "\"requirements\":{",
-					    "	\""+ReqType.KILL.name()+"\":{},",
-					    "	\""+ReqType.RIDE.name()+"\":{},",
-					    "	\""+ReqType.TAME.name()+"\":{},",
-					    "	\""+ReqType.BREED.name()+"\":{},",
-					    "	\""+ReqType.ENTITY_INTERACT.name()+"\":{}",
-					    "},",
-					    "\"nbt_requirements\":{",
-					    "	\""+ReqType.KILL.name()+"\":[],",
-					    "	\""+ReqType.RIDE.name()+"\":[],",
-					    "	\""+ReqType.TAME.name()+"\":[],",
-					    "	\""+ReqType.BREED.name()+"\":[],",
-					    "	\""+ReqType.ENTITY_INTERACT.name()+"\":[]",
-					    "}",
-						"}")),
+		ITEMS("pmmo/items", server -> ForgeRegistries.ITEMS.getKeys(), override -> {
+			ObjectData data = new ObjectData(override, new HashSet<>(),
+					Arrays.stream(ReqType.ITEM_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new HashMap<>())),
+					Arrays.stream(ReqType.ITEM_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new ArrayList<>())),
+					new HashMap<>(),
+					Arrays.stream(EventType.ITEM_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new HashMap<>())),
+					Arrays.stream(EventType.ITEM_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new ArrayList<>())),
+					Map.of(ModifierDataType.WORN, new HashMap<>(), ModifierDataType.HELD, new HashMap<>()),
+					Map.of(ModifierDataType.WORN, new ArrayList<>(), ModifierDataType.HELD, new ArrayList<>()),
+					Map.of(new ResourceLocation("modid:item"), SalvageBuilder.start().build()),
+					VeinData.EMPTY);
+			JsonElement raw = ObjectData.CODEC.encodeStart(JsonOps.INSTANCE, data).result().get();
+			return gson.toJson(raw);}),
+		BLOCKS("pmmo/blocks", server -> ForgeRegistries.BLOCKS.getKeys(), override -> {
+			ObjectData data = new ObjectData(override, new HashSet<>(),
+					Arrays.stream(ReqType.BLOCK_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new HashMap<>())),
+					Arrays.stream(ReqType.BLOCK_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new ArrayList<>())),
+					new HashMap<>(), //negative effects
+					Arrays.stream(EventType.BLOCK_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new HashMap<>())),
+					Arrays.stream(EventType.BLOCK_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new ArrayList<>())),
+					new HashMap<>(), //bonuses
+					new HashMap<>(), //nbt bonuses
+					new HashMap<>(), //salvage
+					new VeinData(Optional.empty(), Optional.empty(), Optional.of(1)));
+			JsonObject raw = ObjectData.CODEC.encodeStart(JsonOps.INSTANCE, data).result().get().getAsJsonObject();
+			raw.remove("negative_effect");
+			raw.remove("bonuses");
+			raw.remove("nbt_bonuses");
+			raw.remove("salvage");
+			return gson.toJson(raw);}),
+		ENTITIES("pmmo/entities", server -> ForgeRegistries.ENTITY_TYPES.getKeys(), override -> {
+			ObjectData data = new ObjectData(override, new HashSet<>(),
+					Arrays.stream(ReqType.ENTITY_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new HashMap<>())),
+					Arrays.stream(ReqType.ENTITY_APPLICABLE_EVENTS).collect(Collectors.toMap(r -> r, r -> new ArrayList<>())),
+					new HashMap<>(), //negative effects
+					Arrays.stream(EventType.ENTITY_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new HashMap<>())),
+					Arrays.stream(EventType.ENTITY_APPLICABLE_EVENTS).collect(Collectors.toMap(e -> e, e -> new ArrayList<>())),
+					new HashMap<>(), //bonuses
+					new HashMap<>(), //nbt bonuses
+					new HashMap<>(), //salvage
+					VeinData.EMPTY);
+			JsonObject raw = ObjectData.CODEC.encodeStart(JsonOps.INSTANCE, data).result().get().getAsJsonObject();
+			raw.remove("negative_effect");
+			raw.remove("bonuses");
+			raw.remove("nbt_bonuses");
+			raw.remove("salvage");
+			raw.remove(VeinMiningLogic.VEIN_DATA);
+			return gson.toJson(raw);}),
 		DIMENSIONS("pmmo/dimensions", server -> new HashSet<>(server.levelKeys().stream().map(key -> key.location()).toList()), 
-				List.of("{",
-					    "\"bonus\":{",
-					    "    \""+ModifierDataType.DIMENSION.name()+"\":{}",
-					    "},",
-					    "\"travel_req\":{},",
-					    "\"vein_blacklist\":[],",
-					    "\"mob_multiplier\":{}",
-						"}")),
-		BIOMES("pmmo/biomes", server -> ForgeRegistries.BIOMES.getKeys(), 
-				List.of("{",
-					    "\"bonus\":{",
-					    "    \""+ModifierDataType.BIOME.name()+"\":{}",
-					    "},",
-					    "\"positive_effect\":{},",
-					    "\"negative_effect\":{},",
-					    "\"travel_req\":{},",
-					    "\"vein_blacklist\":[],",
-					    "\"mob_multiplier\":{}",
-						"}")),
-		ENCHANTMENTS("pmmo/enchantments", server -> ForgeRegistries.ENCHANTMENTS.getKeys(), 
-				List.of("{",
-						"\"levels\":[]",
-						"}")),
-		EFFECTS("pmmo/effects", server -> ForgeRegistries.MOB_EFFECTS.getKeys(), 
-				List.of("{",
-						"\"levels\":[]",
-						"}"));
+				override -> {
+				LocationData data = new LocationData(override, new HashSet<>(),
+						Map.of(ModifierDataType.DIMENSION, new HashMap<>()),
+						new HashMap<>(),
+						new HashMap<>(),
+						new ArrayList<>(),
+						new HashMap<>(),
+						new HashMap<>());				
+				JsonObject raw = LocationData.CODEC.encodeStart(JsonOps.INSTANCE, data).result().get().getAsJsonObject();
+				raw.remove("positive_effect");
+				raw.remove("negative_effect");
+				return gson.toJson(raw);}),
+		BIOMES("pmmo/biomes", server -> ForgeRegistries.BIOMES.getKeys(), override -> {
+			LocationData data = new LocationData(override, new HashSet<>(),	Map.of(ModifierDataType.BIOME, new HashMap<>()),
+					new HashMap<>(), new HashMap<>(),new ArrayList<>(),	new HashMap<>(), new HashMap<>());				
+			JsonObject raw = LocationData.CODEC.encodeStart(JsonOps.INSTANCE, data).result().get().getAsJsonObject();
+			return gson.toJson(raw);}),
+		ENCHANTMENTS("pmmo/enchantments", server -> ForgeRegistries.ENCHANTMENTS.getKeys(), override -> {
+			return gson.toJson(EnhancementsData.CODEC.encodeStart(JsonOps.INSTANCE, 
+					new EnhancementsData(override, new HashMap<>())).result().get());
+		}),
+		EFFECTS("pmmo/effects", server -> ForgeRegistries.MOB_EFFECTS.getKeys(), override -> {
+			return gson.toJson(EnhancementsData.CODEC.encodeStart(JsonOps.INSTANCE, 
+					new EnhancementsData(override, new HashMap<>())).result().get());
+		}); 
+
 		
 		public String route;
 		public Function<MinecraftServer, Set<ResourceLocation>> valueList;
-		private List<String> defaultData;
-		Category(String route, Function<MinecraftServer, Set<ResourceLocation>> values, List<String> defaultData) {
+		private Function<Boolean, String> defaultData;
+		Category(String route, Function<MinecraftServer, Set<ResourceLocation>> values, Function<Boolean, String> defaultData) {
 			this.route = route;
 			this.valueList = values;
 			this.defaultData = defaultData;
-		}
-		
-		public List<String> defaultData(boolean withOverride) {
-			List<String> outList = new ArrayList<>(defaultData);
-			if (withOverride)
-				outList.set(0, "{\"override\":true,");
-			return outList;
 		}
 	}
 	
@@ -252,9 +145,9 @@ public class PackGenerator {
 				Path finalPath = filepath.resolve("data/"+id.getNamespace()+"/"+category.route);
 				finalPath.toFile().mkdirs();
 				try {
-				Files.write(
+				Files.writeString(
 						finalPath.resolve(id.getPath()+".json"), 
-						category.defaultData(withOverride), 
+						category.defaultData.apply(withOverride),
 						Charset.defaultCharset(),
 						StandardOpenOption.CREATE_NEW,
 						StandardOpenOption.WRITE);
